# CppLearning

./: CMakeLists.txt  Comments.txt  README.md  generate_build_vc2019.bat  generate_build_vc2022.bat
.github/workflows/: cmake-build.yml
01/: CMakeLists.txt
01/EmptyMain/: CMakeLists.txt  aboba.h  main1.cpp  main2.cpp  main3.cpp  main4.cpp  main5.cpp
02/: CMakeLists.txt
02/08_HanoiTower/: CMakeLists.txt  main.cpp
02/Collatz/: CMakeLists.txt  Collatz.h  README.md  collatz-test.cpp  main.cpp
02/PrimeFactors/: CMakeLists.txt  README.md  factors-gen.h  main.cpp
02/PrimeFactors/test/: CMakeLists.txt  factors-gen-test.cpp
03/: CMakeLists.txt
03/01-rectangle/: rectangle.hpp
03/03-TriangleSquareCircle/: 05-test.cpp  CMakeLists.txt  Circle.hpp  Ellipse.cpp  Ellipse.hpp  Rectangle.hpp  Square.hpp  Triangle.hpp  Visitor.cpp  Visitor.hpp  interfaces.hpp  main.cpp
03/03-TriangleSquareCircle/test/: 03-test.cpp  11-06-visitor-test.cpp
03/04-Siams/: CMakeLists.txt  main.cpp
03/06-Container/: CMakeLists.txt  Container.hpp  container-test.cpp
03/07-IPv4/: CMakeLists.txt  IPv4.hpp  ipv4-test.cpp  main.cpp
03/rectangle/: CMakeLists.txt  main.cpp  rectangle-test.cpp
04/: CMakeLists.txt
04/07-Fibo/: CMakeLists.txt  Fibobacci.hpp  fibonacci-test.cpp
04/12-add_const/: CMakeLists.txt  add_const-test.cpp
04/13-Decay/: CMakeLists.txt  decay-test.cpp
04/14-is-class/: CMakeLists.txt  is-class-test.cpp
04/15-typeList/: CMakeLists.txt  type-list-test.cpp  typeList.hpp
05/: CMakeLists.txt
05/11-Decorator/: CMakeLists.txt  decorator-test.cpp  text.hpp
06/: CMakeLists.txt
06/01/: CMakeLists.txt  Entity.cpp  Entity.hpp  main.cpp
06/02-FastPimpl/: CMakeLists.txt  README.md
06/02-FastPimpl/FastPimpl/: CMakeLists.txt  Entity.hpp  EntityImpl.cpp  fast-pimpl-test.cpp
06/02-FastPimpl/Pimpl/: CMakeLists.txt  Entity.hpp  EntityImpl.cpp
06/03/: .gitignore  README.md  main.cpp
07/: CMakeLists.txt
07/01-SquareEquation/: CMakeLists.txt  SquareEquation.hpp  square-equation-test.cpp
07/03-person-optional/: CMakeLists.txt  Person.h  person-test.cpp
07/05-AddExceptions/: 03.17.class.operator.overload.cpp  CMakeLists.txt  RatioException.hpp
07/06-evaluate_salary_and_return_name/: evaluate_salary_and_return_name.md
07/09-Bench/: CMakeLists.txt  README.md  bench.cpp
07/10-BinSearchTest/: BinSearch.hpp  CMakeLists.txt  bin-search-test.cpp
09/: 01.md  CMakeLists.txt
09/02-Logger/: CMakeLists.txt  Logger.hpp  logger-test.cpp
09/04/: 05.02.pattern.factory.cpp  05.03.pattern.prototype.cpp  05.07.pattern.composite.cpp  05.08.pattern.decorator.cpp  05.10.pattern.observer.cpp  05.12.pattern.strategy.cpp  CMakeLists.txt
09/05/: CMakeLists.txt  Unique.hpp  unique-test.cpp
09/11-BiList/: 09.06.implementation.iterator.forward.list.cpp  CMakeLists.txt
10/: CMakeLists.txt
10/06-DangerMap/: 10.06.danger-map.cpp  CMakeLists.txt
10/08-PhoneBook/: CMakeLists.txt  Phonebook.hpp  phone-book-test.cpp
11/: 11.01.self-pointer-function.cpp  11.03.factory-test.cpp  11.16.views-test.cpp  CMakeLists.txt
11/10-AnyOf-AllOf-NoneOf/: CMakeLists.txt  Checkes.hpp  checkers-test.cpp
11/11-transform-if/: CMakeLists.txt  transform-if-test.cpp  transform_if.hpp
12-strings/: 12.15.emails-test.cpp  CMakeLists.txt
12-strings/02-sso-bench/: CMakeLists.txt  README.md  sso-bench.cpp
12-strings/05-HexStringToBytes/: CMakeLists.txt  hex-strings-to-bytes-test.cpp  hex-strings-to-bytes.hpp
12-strings/09/: CMakeLists.txt  a3b3c3-test.cpp  a3b3c3.hpp
12-strings/09-a3b3c3/: README.md
12-strings/16-URL/: CMakeLists.txt  URL.hpp  url-test.cpp
12-strings/20-RevertPolishNotation/: CMakeLists.txt  RevertPolishNotation.hpp  rpn-test.cpp
13-io-serialization/: 13-01-bytes-to-hex-string.cpp  13-02-print-pascal-triangles.cpp  13-03-processes.cpp  CMakeLists.txt
13-io-serialization/05-CleanFile/: CMakeLists.txt  clean-file-test.cpp  clean.hpp
13-io-serialization/08-RemoveOldFiles/: CMakeLists.txt  remove-tests.cpp  remove.hpp
